--- a/screw-unit-test/test_Row.html
+++ b/screw-unit-test/test_Row.html
@@ -14,6 +14,12 @@
     <script type="text/javascript">
       Screw.Unit(function() {
         describe("ROW.first()", function() {
+          it("fires init() if (and only if) the document rows are not linked", function() {
+			ROW.first();
+			expect(ROW.rows.length).to(equal, 6);
+			ROW.first();
+			expect(ROW.rows.length).to(equal, 6);
+		  });
           it("gives the first row in the document", function() {
 			expect(ROW.first().id).to(equal, "L0001");
 		  });
